--- a/app.json
+++ b/app.json
@@ -23,7 +23,12 @@
     "test": {
       "scripts": {
         "test": "npm run test"
-      }
+      },
+      "addons": [
+        {
+          "plan": "heroku-postgresql:performance-beta"
+        }
+      ]
     }
   }
 }
